--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/Users/charles/.pyenv/versions/unet/bin/python"
+    "python.pythonPath": "/Users/charles/.pyenv/versions/unet/bin/python",
+    "jupyter.jupyterServerType": "local"
 }
