--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/Users/charles/.pyenv/versions/unet/bin/python",
+    "python.pythonPath": "/Users/charles/.pyenv/versions/3.9.1/bin/python",
     "jupyter.jupyterServerType": "local",
     "python.formatting.provider": "black"
 }
